src/test/deca/codegen/valid/black-box/cast_to_float.deca
{
    int a = 5;
    float f = (float) (a);
    print(f);
}