src/test/deca/codegen/invalid/oracle/cast_bool_to_int.deca
{
    boolean a = true;
    float f = (float) a;
}